minor ui improvements

--- a/metrics_monitor/src/index.html
+++ b/metrics_monitor/src/index.html
@@ -22,6 +22,7 @@
                 <div class="row d-flex align-items-center">
                     <h6>Refresh</h6>
                     <div class="btn-group-md" role="group" aria-label="First group">
+                        <button type="button" class="btn btn-outline-secondary" onclick="updateRefresh(5)">5s</button>
                         <button type="button" class="btn btn-outline-secondary" onclick="updateRefresh(20)">20s</button>
                         <button type="button" class="btn btn-outline-secondary" onclick="updateRefresh(60)">1m</button>
                         <button type="button" class="btn btn-outline-secondary" onclick="updateRefresh(300)">5m</button>
@@ -76,13 +77,13 @@
             </div>
             <div class="col hits">
                 <div class="row">
-                    <div class="col-auto gets">
+                    <div class="col-auto gets m-3">
                     </div>
-                    <div class="col-auto posts">
+                    <div class="col-auto posts m-3">
                     </div>
-                    <div class="col-auto puts">
+                    <div class="col-auto puts m-3">
                     </div>
-                    <div class="col-auto others">
+                    <div class="col-auto others m-3">
                     </div>
                 </div>
             </div>
