fixing sniirful mistakes

--- a/metrics_monitor/src/index.html
+++ b/metrics_monitor/src/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div class="container-fluid">
-        <div class="row mb-5 pb-3 mt-5">
+        <div class="row pb-5 pb-3 pt-5">
 
             <div class="col-8">
                 <img src="./assets/images/title.gif" id="titleImage" class="img-fluid">
@@ -37,7 +37,7 @@
         </div>
     </div>
     <div class="container-fluid" id="mainContent">
-        <div class="row ps-3 mb-5" id="generalInfo">
+        <div class="row ps-3 pb-5" id="generalInfo">
             <div class="col">
                 <h6></h6>
             </div>
@@ -45,7 +45,7 @@
                 <h6></h6>
             </div>
         </div>
-        <div class="row serviceCard ps-3 mb-5 d-none">
+        <div class="row serviceCard ps-3 mb-5 pb-5 d-none">
             <div class="col-lg-3">
                 <div class="row">
                     <div class="col serviceBasicInfo">
