--- a/web/frontend/index.html
+++ b/web/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <link rel="icon" type="image/x-icon" href="/src/assets/images/k1nd4SUS.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Cerbero | K!ndASUS</title>
+    <title>Cerbero | K!nd4SUS</title>
   </head>
   <body>
     <div id="root"></div>
